--- a/_cobalt.yml
+++ b/_cobalt.yml
@@ -1,7 +1,8 @@
+# Build options.
+source: src
+destination: build
 
+# Site options.
 site:
-  title: cobalt blog
-  description: Blog Posts Go Here
-  base_url: http://example.com
-posts:
-  rss: rss.xml
+  title: Cauldron
+  description: A simple recipe website.
